@@ -118,8 +118,6 @@ Manager::Manager(): QObject(){
 
 void Manager::createNotify(XCreateWindowEvent *e){
   if (e->parent== qt_xrootwin()){ 
-    ignore_badwindow = TRUE;
-    XSync(qt_xdisplay(), False);
     if (KWM::isKWMModule(e->window))
       addModule(e->window);
     if (!getClient(e->window)){
@@ -132,9 +130,6 @@ void Manager::createNotify(XCreateWindowEvent *e){
       }
       
     }
-    /* flush any errors */
-    XSync(qt_xdisplay(), False);
-    ignore_badwindow = FALSE;
   }
 }
 
@@ -748,14 +743,28 @@ void Manager::manage(Window w, bool mapped){
 
   if (KWM::isMaximized(c->window)){
     QRect tmprec = KWM::geometryRestore(c->window);
-    if (pseudo_session_management){
-      // avoid flickering
-      c->maximized = TRUE;
-      c->buttonMaximize->toggle();
-    }
-    else {
-      c->maximize();
-    }
+
+    /* Rethink this TODO. I cannot do maximize since this would
+     * break the tree different maximize levels 
+     * (full, horizontal, vertical). I do not want to introduce
+     * a integer flag for maximize. Let us try is this way.
+     * The only drawback: a application that wants to start up
+     * maximized (not session management) must call setMaximize
+     * after it has been mapped. Should not be a problem.
+     */
+
+    // avoid flickering
+    c->maximized = TRUE;
+    c->buttonMaximize->toggle();
+    
+//     if (mapped || pseudo_session_management){
+//       // avoid flickering
+//       c->maximized = TRUE;
+//       c->buttonMaximize->toggle();
+//     }
+//     else {
+//       c->maximize();
+//     }
     c->geometry_restore = tmprec;
   }
   
@@ -779,12 +788,6 @@ void Manager::withdraw(Client* c){
   XRemoveFromSaveSet(qt_xdisplay(), c->window);
   setWindowState(c, WithdrawnState);
   
-
-  /* flush any errors */
-  ignore_badwindow = TRUE;
-  XSync(qt_xdisplay(), False);
-  ignore_badwindow = FALSE;
-
   removeClient(c);
 }
 
@@ -840,7 +843,6 @@ void Manager::activateClient(Client* c, bool set_revert){
 }
 
 void Manager::removeClient(Client* c){
-  ignore_badwindow = TRUE;
   bool do_nofocus = (current() == c);
   clients.removeRef(c);
   clients_sorted.removeRef(c);
@@ -849,9 +851,7 @@ void Manager::removeClient(Client* c){
     noFocus();
   sendToModules(module_win_remove, c->window);
   delete c;
-  /* flush any errors generated by the window's sudden demise */
-  XSync(qt_xdisplay(), False);
-  ignore_badwindow = FALSE;
+
 }
 
 
